added comments & explanations to `index.html`

--- a/index.html
+++ b/index.html
@@ -108,29 +108,40 @@
                         $$\oint \vec{E} \cdot d \vec{A}=\frac{Q}{\varepsilon_{0}}$$
                     </p>
                         <br/>
-                    <!-- quote's author -->
+                    <!-- quote's -->
                     <p class="panel-cover_description iUp">
                         <strong>-「Gauss's Law」</strong>
                     </p>
+
+                    <!-- navigation buttons -->
                     <div class="navigation-wrapper iUp">
                         <div>
                             <nav class="cover-navigation cover-navigation--primary">
                                 <ul class="navigation">
+                                    <!-- home -->
                                     <li class="navigation__item">
                                         <a href="/" class="blog-button">Home<br><span class="jp">主頁</span></a>
                                     </li>
+
+                                    <!-- blog -->
                                     <li class="navigation__item">
                                         <a href="https://blog.toshiki.top/" class="blog-button" target="_blank">Blog<br><span class="jp">博客</span></a>
                                     </li>
+
+                                    <!-- about -->
                                     <li class="navigation__item">
                                         <a href="https://blog.toshiki.top/about/" class="blog-button" target="_blank">About<br><span class="jp">關於</span></a>
                                     </li>
+
+                                    <!-- more -->
                                     <li class="navigation__item">
                                         <a href="https://lab.toshiki.top/" class="blog-button" target="_blank">More<br><span class="jp">更多</span></a>
                                     </li>
                                 </ul>
                             </nav>
                         </div>
+
+                        <!-- personal links -->
                         <div class="iUp">
                             <nav class="cover-navigation navigation--social">
                                 <!-- starts with an ul -->
@@ -200,24 +211,44 @@
             <a class="icp" href="http://www.miitbeian.gov.cn/publish/query/indexFirst.action" target="_blank">XXX</a>
             <a class="gwab" href="http://www.beian.gov.cn/portal/recordQuery" target="_blank">XXX</a>
         </div> -->
+
+        <!-- footer powers and sponsors -->
         <div class="remark iUp">
             <p class="power">Powered By 
                 <a href="https://github.com/features/actions" target="_blank"> GitHub Actions </a> And 
                 <a href="https://hitokoto.cn/" target="_blank"> Hitokoto </a>
                 <br />
+
+                <!-- site runtime -->
                 <span id="sitetime"></span>
             </p>
         </div>
     </header>
+    <!--javascripts -->
+    <!-- aplayer.js -->
     <script src="assets/js/aplayer.js"></script>
+
+    <!-- meting.js -->
     <script src="https://cdn.jsdelivr.net/npm/meting@2/dist/Meting.min.js"></script>
+
+    <!-- jquery -->
     <script type="text/javascript" src="assets/js/jquery.min.js"></script>
+
+    <!-- main js file for serving site features -->
     <script type="text/javascript" src="assets/js/home.js"></script>
+
+    <!-- hitokoto.js for random quotes, temporarily disabled -->
     <!--<script src="text/javascript" src="assets/js/hitokoto.js"></script> -->
+
     <!-- Cursor clicking effect: firework.js -->
     <script type="text/javascript" src="assets/js/fireworks.js"></script>
+    <!-- canvas for cursor clicking effect -->
     <canvas class="circle" style="position: fixed;left: 0;top: 0;z-index: 1; pointer-events: none;"></canvas>
+
+    <!-- iziToast js for toast messages -->
     <script defer type="text/javascript" src="https://cdn.jsdelivr.net/npm/izitoast@1.4.0/dist/js/iziToast.min.js"></script>
+
+    <!-- test toast message -->
     <script>
 		window.onload = function(){  
 			iziToast.show({
