--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
     <canvas class="circle" style="position: fixed;left: 0;top: 0;z-index: 1; pointer-events: none;"></canvas>
 
     <!-- iziToast js for toast messages -->
-    <script defer type="text/javascript" src="https://cdn.jsdelivr.net/npm/izitoast@1.4.0/dist/js/iziToast.min.js"></script>
+    <script defer type="text/javascript" src="assets/js/iziToast.min.js"></script>
 
     <!-- test toast message -->
     <script>
