modified player.min.js file path

--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
     </header>
     <!--javascripts -->
     <!-- aplayer.js -->
-    <script src="assets/js/aplayer.js"></script>
+    <script src="assets/js/aplayer.min.js"></script>
 
     <!-- meting.js -->
     <script src="https://cdn.jsdelivr.net/npm/meting@2/dist/Meting.min.js"></script>
