--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <html>
 
 <head>
-    <!-- meta and SEO relates -->
+    <!-- meta, site name, description, keywords, author and SEO relates -->
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
