moved location of `sweetalert.js` down to `<body>` tags

--- a/index.html
+++ b/index.html
@@ -32,7 +32,6 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/aplayer/dist/APlayer.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/izitoast@1.4.0/dist/css/iziToast.min.css">
     <link rel="stylesheet" href="assets/css/sweetalert2.min.css">
-    <script src="assets/js/sweetalert2.all.min.js"></script>
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.15.4/css/all.css">
     <link rel="stylesheet" type="text/css" href="assets/css/fonts.css"/>
     <link rel="stylesheet" type="text/css" href="assets/css/home.css">
@@ -249,6 +248,9 @@
 
     <!-- iziToast js for toast messages -->
     <script defer type="text/javascript" src="assets/js/iziToast.min.js"></script>
+
+    <!-- sweetalert2 js -->
+    <script type="text/javascript" src="assets/js/sweetalert2.all.min.js"></script>
 
     <!-- test toast message -->
     <script>
