changed `meting.js` file path

--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
     <script src="assets/js/aplayer.min.js"></script>
 
     <!-- meting.js -->
-    <script src="https://cdn.jsdelivr.net/npm/meting@2/dist/Meting.min.js"></script>
+    <script src="assets/js/meting.min.js"></script>
 
     <!-- jquery -->
     <script type="text/javascript" src="assets/js/jquery.min.js"></script>
