added commets for icp infos

--- a/index.html
+++ b/index.html
@@ -208,6 +208,8 @@
             </div>
             <div class="panel-cover--overlay cover-slate"></div>
         </div>
+
+        <!-- icp infos -->
         <!-- <div class="beian iUp">
             <a class="icp" href="http://www.miitbeian.gov.cn/publish/query/indexFirst.action" target="_blank">XXX</a>
             <a class="gwab" href="http://www.beian.gov.cn/portal/recordQuery" target="_blank">XXX</a>
