made some css stylesheets local

--- a/index.html
+++ b/index.html
@@ -29,9 +29,10 @@
     <title>俊樹's Homepage</title>
 
     <!-- css stylesheets -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/aplayer/dist/APlayer.min.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/izitoast@1.4.0/dist/css/iziToast.min.css">
-    <link rel="stylesheet" href="assets/css/sweetalert2.min.css">
+    <link rel="stylesheet" type="text/css" href="asstes/css/APlayer.min.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/">
+    <!-- https://cdn.jsdelivr.net/npm/izitoast@1.4.0/dist/css/iziToast.min.css -->
+    <link rel="stylesheet" type="text/css" href="assets/css/sweetalert2.min.css">
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.15.4/css/all.css">
     <link rel="stylesheet" type="text/css" href="assets/css/fonts.css"/>
     <link rel="stylesheet" type="text/css" href="assets/css/home.css">
