--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                     <div class="ih-item circle effect right_to_left">            
                         <a href="#" title="" class="blog-button">
                             <!-- avatar img -->
-                            <div class="img"><img src="assets/img/avatar.png" alt="img" class="js-avatar iUp profilepic"></div>
+                            <div class="img"><img src="https://www.png8.com/imgs/2022/04/01/7743d7d8a340151a.png" alt="img" class="js-avatar iUp profilepic"></div>
                             <div class="info iUp">
                                 <div class="info-back">
                                     <!-- info text behind avatar -->
