changed `iziToast` cdn to jsdelivr

--- a/index.html
+++ b/index.html
@@ -290,7 +290,8 @@
     <canvas class="circle" style="position: fixed;left: 0;top: 0;z-index: 1; pointer-events: none;"></canvas>
 
     <!-- iziToast js for toast messages -->
-    <script defer type="text/javascript" src="assets/js/iziToast.min.js"></script>
+    <!-- <script defer type="text/javascript" src="assets/js/iziToast.min.js"></script> -->
+    <script src="https://cdn.jsdelivr.net/npm/izitoast@1.4.0/dist/js/iziToast.min.js"></script>
 
     <!-- sweetalert2 js -->
     <script type="text/javascript" src="assets/js/sweetalert2.all.min.js"></script>
