vercel is not fast enough no choice fucking cdn from jsd

--- a/index.html
+++ b/index.html
@@ -39,22 +39,22 @@
     <!-- https://cdn.jsdelivr.net/npm/izitoast@1.4.0/dist/css/iziToast.min.css -->
 
     <!-- sweetalert2 css -->
-    <link rel="stylesheet" type="text/css" href="assets/css/sweetalert2.min.css">
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/gh/andatoshiki/toshiki-home/assets/css/sweetalert2.min.css">
 
     <!-- fontawesome css stylesheets, have not enough disk space to fucking download the entire fontawesome font pack -->
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.15.4/css/all.css">
 
     <!-- fonts integration -->
-    <link rel="stylesheet" type="text/css" href="assets/css/fonts.css"/>
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/gh/andatoshiki/toshiki-home/assets/css/fonts.css"/>
 
     <!-- main home css -->
-    <link rel="stylesheet" type="text/css" href="assets/css/home.css">
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/gh/andatoshiki/toshiki-home/assets/css/home.css">
 
     <!-- vno css -->
-    <link rel="stylesheet" type="text/css" href="assets/css/vno.css">
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/gh/andatoshiki/toshiki-home/assets/css/vno.css">
 
     <!-- iconfont css -->
-    <link rel="stylesheet" type="text/css" href="assets/css/iconfont.css">
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/gh/andatoshiki/toshiki-home/assets/css/iconfont.css">
 
     <!-- katex starts -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.15.3/dist/katex.min.css" integrity="sha384-KiWOvVjnN8qwAZbuQyWDIbfCLFhLXNETzBQjA/92pIowpC0d2O3nppDGQVgwd2nB" crossorigin="anonymous">
@@ -276,16 +276,16 @@
     <script src="assets/js/meting.min.js"></script>
 
     <!-- jquery -->
-    <script type="text/javascript" src="assets/js/jquery.min.js"></script>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/gh/andatoshiki/toshiki-home/assets/js/jquery.min.js"></script>
 
     <!-- main js file for serving site features -->
-    <script type="text/javascript" src="assets/js/home.js"></script>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/gh/andatoshiki/toshiki-home/assets/js/home.js"></script>
 
     <!-- hitokoto.js for random quotes, temporarily disabled -->
     <!--<script src="text/javascript" src="assets/js/hitokoto.js"></script> -->
 
     <!-- Cursor clicking effect: firework.js -->
-    <script type="text/javascript" src="assets/js/fireworks.js"></script>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/gh/andatoshiki/toshiki-home/assets/js/fireworks.js"></script>
     <!-- canvas for cursor clicking effect -->
     <canvas class="circle" style="position: fixed;left: 0;top: 0;z-index: 1; pointer-events: none;"></canvas>
 
@@ -294,9 +294,9 @@
     <script src="https://cdn.jsdelivr.net/npm/izitoast@1.4.0/dist/js/iziToast.min.js"></script>
 
     <!-- sweetalert2 js -->
-    <script type="text/javascript" src="assets/js/sweetalert2.all.min.js"></script>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/gh/andatoshiki/toshiki-home/assets/js/sweetalert2.all.min.js"></script>
 
     <!-- busuanzi site view stats -->
-    <script type="text/javascript" src="assets/js/busuanzi.min.js"></script>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/gh/andatoshiki/toshiki-home/assets/js/busuanzi.min.js"></script>
 </body>
 </html>
