changed footer text layout

--- a/index.html
+++ b/index.html
@@ -250,17 +250,19 @@
                 <a href="https://icp.gov.moe/?keyword=20220409" target="_blank"><i class="fas fa-shield-alt fa-sm"></i> 萌ICP备20220409号</a>
                 <br />
 
+                <!-- author info -->
                 Made with <i class="fas fa-heart"></i> by Anda Toshiki
                 <br />
+
+                <!-- site viewtime -->
+                This site has been viewed for <span class="sitestats" id="busuanzi_value_site_pv"></span> times
+                <br />
+
                 <!-- powers & sponsors -->
                 Powered By
                 <a href="https://github.com" target="_blank"><i class="fab fa-github fa-sm"></i> GitHub </a>, 
                 <a href="https://katex.org/" target="_blank"> <i class="fas fa-calculator fa-sm"></i> $\KaTeX$</a> &
                 <a href="https://vercel.com/" target="_blank"> <i class="fas fa-server fa-sm"></i> Vercel</a>
-                <br />
-
-                <!-- site viewtime -->
-                This site has been viewed for <span class="sitestats" id="busuanzi_value_site_pv"></span> times
                 <br />
 
                 <!-- site runtime -->
