added `gtag.js` for google analytics

--- a/index.html
+++ b/index.html
@@ -300,5 +300,15 @@
 
     <!-- busuanzi site view stats -->
     <script type="text/javascript" src="https://cdn.jsdelivr.net/gh/andatoshiki/toshiki-home/assets/js/busuanzi.min.js"></script>
+    
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-VJHEXGGGL3"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-VJHEXGGGL3');
+    </script>
 </body>
 </html>
