added `meta` tag for baidu SEO verification

--- a/index.html
+++ b/index.html
@@ -91,6 +91,9 @@
 
     gtag('config', 'G-VJHEXGGGL3');
     </script>
+
+    <!-- baidu SEO verfication -->
+    <meta name="baidu-site-verification" content="code-RyBbMK3yuG" />
 </head>
 
 <body>
