replaced cdn source from jsdelivr to baomitu

--- a/index.html
+++ b/index.html
@@ -30,19 +30,19 @@
 
     <!-- css stylesheets -->
     <!-- aplayer css -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/aplayer@1.10.1/dist/APlayer.min.css">
+    <link rel="stylesheet" href="https://lib.baomitu.com/aplayer/1.10.1/APlayer.min.css">
 
     <!-- izitoast css -->
-    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/izitoast@1.4.0/dist/css/iziToast.min.css">
+    <link rel="stylesheet" type="text/css" href="https://lib.baomitu.com/izitoast/1.4.0/css/iziToast.min.css">
 
     <!-- replacing link -->
     <!-- https://cdn.jsdelivr.net/npm/izitoast@1.4.0/dist/css/iziToast.min.css -->
 
     <!-- sweetalert2 css -->
-    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/gh/andatoshiki/toshiki-home/assets/css/sweetalert2.min.css">
+    <link rel="stylesheet" type="text/css" href="https://lib.baomitu.com/limonte-sweetalert2/6.11.5/sweetalert2.min.css">
 
     <!-- fontawesome css stylesheets, have not enough disk space to fucking download the entire fontawesome font pack -->
-    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.15.4/css/all.css">
+    <link rel="stylesheet" type="text/css" href="https://lib.baomitu.com/font-awesome/5.15.4/css/all.css">
 
     <!-- fonts integration -->
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/gh/andatoshiki/toshiki-home/assets/css/fonts.css"/>
@@ -285,7 +285,7 @@
     </header>
     <!--javascripts -->
     <!-- aplayer.js -->
-    <script src="assets/js/aplayer.min.js"></script>
+    <script src="https://lib.baomitu.com/aplayer/1.10.1/APlayer.min.js"></script>
 
     <!-- meting.js -->
     <script src="assets/js/meting.min.js"></script>
@@ -306,10 +306,10 @@
 
     <!-- iziToast js for toast messages -->
     <!-- <script defer type="text/javascript" src="assets/js/iziToast.min.js"></script> -->
-    <script src="https://cdn.jsdelivr.net/npm/izitoast@1.4.0/dist/js/iziToast.min.js"></script>
+    <script type="text/javasscript" src="https://lib.baomitu.com/izitoast/1.4.0/js/iziToast.min.js"></script>
 
     <!-- sweetalert2 js -->
-    <script type="text/javascript" src="https://cdn.jsdelivr.net/gh/andatoshiki/toshiki-home/assets/js/sweetalert2.all.min.js"></script>
+    <script type="text/javascript" src="https://lib.baomitu.com/limonte-sweetalert2/6.11.5/sweetalert2.all.min.js"></script>
 
     <!-- busuanzi site view stats -->
     <script type="text/javascript" src="https://cdn.jsdelivr.net/gh/andatoshiki/toshiki-home/assets/js/busuanzi.min.js"></script>
