--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/gh/andatoshiki/toshiki-home/assets/css/fonts.css"/>
 
     <!-- main home css -->
-    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/gh/andatoshiki/toshiki-home/assets/css/home.css">
+    <link rel="stylesheet" type="text/css" href="https://cdn.toshiki.top/assets/css/home.css">
 
     <!-- vno css -->
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/gh/andatoshiki/toshiki-home/assets/css/vno.css">
